<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
<<<<<<< HEAD
    android:background="@color/gray"
=======
>>>>>>> ef715f8 (Initial commit)
    android:orientation="horizontal">


    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="125dp"
        android:elevation="24dp">

        <ImageView
<<<<<<< HEAD
            android:id="@+id/movies_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/rick"
            android:scaleType="centerCrop" />
=======
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/rick" />
>>>>>>> ef715f8 (Initial commit)

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:orientation="vertical">

        <TextView
<<<<<<< HEAD
            android:id="@+id/movies_title"
=======
            android:id="@+id/title"
>>>>>>> ef715f8 (Initial commit)
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rick"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>